# litext

./: .editorconfig  .gitignore  .qmake.stash  CMakeLists.txt  DocumentModel.cpp  DocumentModel.h  README.md  composer.cpp  composer.h  doc_model_define.h  docmodel.cpp  docmodel.h  drawinfo.cpp  drawinfo.h  font_info.cpp  font_info.h  global.h  install_for_windows.cmake  litext_resources.qrc  main.cpp  notesharp.pro  notesharp.sln  notesharp.vcxproj  notesharp.vcxproj.filters  number_class.h  panel.cpp  panel.h  release_version.cmake  style_config.h  textpad.cpp  textpad.h  textpad2.cpp  textpad2.h
src/: CMakeLists.txt  README.md  entry.cpp  freetype_tmp.cpp  main.cpp
src/charset/: CMakeLists.txt  to_utf16.h  to_utf32.cpp  to_utf32.h  to_utf8.cpp  to_utf8.h  utf.cpp  utf.h
src/charset/unicode/: unicode.cpp  unicode.h  unicode_block_id.h  unicode_block_range.h  unicode_block_table.cpp  unicode_block_table.h
src/common/: common_define.h  dir_enum.h  nullable_class.h
src/config/: view_config.cpp  view_config.h
src/control/: doc_controller.cpp  doc_controller.h  doc_cursor.h
src/core/: CMakeLists.txt  async_deleter.h  basetype.h  block_door.h  block_queue.h  callbacks.h  charset.cpp  charset.h  charset_converter.cpp  charset_converter.h  charset_detector.h  declare_thread_pool.h  direct_file_reader.h  endian.h  filelock.h  font.cpp  font.h  font_index.h  font_old.cpp  font_old.h  fs.h  heap_array.h  idgen.h  io_context.cpp  io_context.h  io_context_strand.cpp  io_context_strand.h  logger-control.cpp  logger-control.h  logger-level.h  logger-writer.cpp  logger-writer.h  logger.cpp  logger.h  membuff.cpp  membuff.h  range.h  readable.h  readable_size_util.h  sigconns.cpp  (+34 more)
src/core/win32/: win32_core.cpp  win32_core.h  win32_core.win32.cpp  win32_core.win32.h  win32_named_pipe.cpp  win32_named_pipe.h  win32_named_pipe.win32.cpp  win32_named_pipe.win32.h  win32api.cpp  win32api.h
src/csconv/: to_utf8.cpp  to_utf8.h
src/doc/: async_doc_server.cpp  async_doc_server.h  cached_char_pix_width_provider.cpp  cached_char_pix_width_provider.h  char_loc.h  charset_detect_util.cpp  charset_detect_util.h  charset_detector.h  dbfiles.cpp  dbfiles.h  declare_async_doc_server.h  declare_doc_cutter_by_row.h  declare_doc_server.h  declare_document.h  declare_document_listener.h  decoded_part.h  doc.h  doc_addr.h  doc_cutter_by_row.cpp  doc_cutter_by_row.h  doc_define.h  doc_line.h  doc_line_num.h  doc_loader.h  doc_loc.h  doc_part.h  doc_row.h  doc_server.cpp  doc_server.h  document.cpp  document.h  document_impl.cpp  document_impl.h  document_listener.h  glyph_width_cache.cpp  glyph_width_cache.h  glyph_width_provider.h  horizontal_text_layout_config.h  layout_config.h  line_end_enum.h  (+35 more)
src/doc/detail/: document_impl.cpp  document_impl.h
src/doc/sql/: asset.prepare_db.sql
src/editor/: cursor.h  declare_editor.h  editor.cpp  editor.h
src/entry/: CMakeLists.txt  main.cpp
src/exe/: CMakeLists.txt  cmdopt.cpp  cmdopt.h  entry.cpp  main.cpp
src/global/: CMakeLists.txt  constants.h  msg.h  server_info.h  work_dir_manager.cpp  work_dir_manager.h
src/gui/: cached_char_pix_width_provider.cpp  cached_char_pix_width_provider.h  char_loc.h  config.cpp  config.h  coordinate_converter.cpp  coordinate_converter.h  declare_config.h  declare_text_area.h  declare_text_area_config.h  draw_vertical_line.h  font_to_qfont.h  glyph_width_provider.h  layout_config.h  line_bound.h  line_counter.cpp  line_counter.h  line_loc.h  line_manger.cpp  line_manger.h  line_offset.h  line_range.h  loc.h  loc_outside_policy.h  page.cpp  page.h  pixel.h  rect.h  render_config.h  row_bound.h  row_loc.h  row_walker.cpp  row_walker.h  size.h  text_area.cpp  text_area.h  text_area_config.cpp  text_area_config.h  text_area_impl.cpp  text_area_impl.h  (+12 more)
src/gui/qt/: declare_editor_view_widget.h  declare_editor_widget.h  declare_status_bar_widget.h  editor_view_widget.cpp  editor_view_widget.h  editor_widget.cpp  editor_widget.h  font_to_qfont.h  gui_strand.cpp  gui_strand.h  gui_thread_worker.cpp  gui_thread_worker.h  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  my_widget.cpp  my_widget.h  object_worker.cpp  object_worker.h  qobject_worker.cpp  (+16 more)
src/lib/: CMakeLists.txt  cmdopt.cpp  cmdopt.h  entry.cpp
src/loader/: CMakeLists.txt  cmdopt.cpp  cmdopt.h  litext_delegate.cpp  litext_delegate.h  loader.cpp  notesharp_delegate.cpp  notesharp_delegate.h  notifier.cpp  notifier.h  notifier.unix.cpp  notifier.unix.h  notifier.win32.cpp  notifier.win32.h
src/model/: doc_addr.h  model_define.h  simple_line.h  simple_model.cpp  simple_model.h
src/qt/: editor_view_widget.cpp  editor_view_widget.h  line_num_bar.cpp  line_num_bar.h  mainwindow.cpp  mainwindow.h  qt_util.cpp  ruler_widget.cpp  ruler_widget.h  status_bar_widget.cpp  status_bar_widget.h  text_area_widget.cpp  text_area_widget.h  textpad.cpp  textpad.h  view_status_bar.cpp  view_status_bar.h
src/sqlite3/: database.cpp  database.h
src/sqlite3_wrapper/: database.cpp  database.h
src/text/: char_instream.h  count_rows.cpp  doc_line_char_instream.h  encoding_converter.cpp  encoding_converter.h  encoding_detector.cpp  encoding_detector.h  linesep_enum.h  txt_word_instream.cpp  txt_word_instream.h  txt_word_stream.cpp  txt_word_stream2.cpp  txt_word_stream2.h  ustring_char_in_stream.h  utf16char_in_stream.h  utf8char_in_stream.h  word_instream.h  word_instream2.h
src/tool/: asset.big_file_maker_kv.txt  asset.big_file_maker_mat.txt  big_file_maker.cpp  big_file_maker.h  cmd_args.h  tool.h
src/util/: block_queue.h  callbacks.h  delete_helper.h  fileutil.cpp  fileutil.h  flagset.h  font.cpp  font.h  listeners.h  stl_container_util.h  str_util.h  thread_pool.cpp
src/view/: draw_vertical_line.h  font.h  font_to_qfont.h  text_area_view.h  view.cpp  view.h  view_addr.h  view_config.h  view_loc.h  view_page.cpp  view_page.h  view_rect.h
src/vui/: view_define.h  view_loc.h  view_rect.h
src/widget/: line_num_bar.cpp  line_num_bar.h  mainwindow.cpp  mainwindow.h  textpad.cpp  textpad.h  textpad2.cpp  textpad2.h
third/freetype_wrapper/: CMakeLists.txt
(+253 files in other folders)
